outputs/output.319737.out
  File "/home/u00786/Research/optimization/runNumerical.py", line 45
    "coef":coef,
    ^
SyntaxError: invalid syntax
